--- a/clase_p_4.ipynb
+++ b/clase_p_4.ipynb
@@ -162,11 +162,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6de0a6cf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>year</th>\n",
+       "      <th>y</th>\n",
+       "      <th>y_bin</th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "      <th>x3</th>\n",
+       "      <th>opinion</th>\n",
+       "      <th>op</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>time</th>\n",
+       "      <th>treated</th>\n",
+       "      <th>did</th>\n",
+       "      <th>_diff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.00000</td>\n",
+       "      <td>7.000000e+01</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.00000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1994.50000</td>\n",
+       "      <td>1.845072e+09</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>0.648001</td>\n",
+       "      <td>0.133869</td>\n",
+       "      <td>0.761851</td>\n",
+       "      <td>2.442857</td>\n",
+       "      <td>0.50000</td>\n",
+       "      <td>1.845072</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.428571</td>\n",
+       "      <td>0.257143</td>\n",
+       "      <td>0.257143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.014441</td>\n",
+       "      <td>2.89302</td>\n",
+       "      <td>3.015167e+09</td>\n",
+       "      <td>0.402888</td>\n",
+       "      <td>0.468070</td>\n",
+       "      <td>1.371099</td>\n",
+       "      <td>1.446332</td>\n",
+       "      <td>1.137448</td>\n",
+       "      <td>0.50361</td>\n",
+       "      <td>3.015167</td>\n",
+       "      <td>0.493435</td>\n",
+       "      <td>0.498445</td>\n",
+       "      <td>0.440215</td>\n",
+       "      <td>0.440215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1990.00000</td>\n",
+       "      <td>-7.863483e+09</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.567575</td>\n",
+       "      <td>-1.621761</td>\n",
+       "      <td>-1.165387</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>-7.863483</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1992.00000</td>\n",
+       "      <td>2.465716e+08</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.328960</td>\n",
+       "      <td>-1.215649</td>\n",
+       "      <td>-0.079315</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.246572</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1994.50000</td>\n",
+       "      <td>1.897898e+09</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.641262</td>\n",
+       "      <td>-0.462143</td>\n",
+       "      <td>0.514191</td>\n",
+       "      <td>2.500000</td>\n",
+       "      <td>0.50000</td>\n",
+       "      <td>1.897898</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>1997.00000</td>\n",
+       "      <td>3.372262e+09</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.095843</td>\n",
+       "      <td>1.607754</td>\n",
+       "      <td>1.154864</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>3.372262</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.750000</td>\n",
+       "      <td>0.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>1999.00000</td>\n",
+       "      <td>8.941232e+09</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.446412</td>\n",
+       "      <td>2.530277</td>\n",
+       "      <td>7.168922</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>8.941232</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         country        year             y      y_bin         x1         x2  \\\n",
+       "count  70.000000    70.00000  7.000000e+01  70.000000  70.000000  70.000000   \n",
+       "mean    4.000000  1994.50000  1.845072e+09   0.800000   0.648001   0.133869   \n",
+       "std     2.014441     2.89302  3.015167e+09   0.402888   0.468070   1.371099   \n",
+       "min     1.000000  1990.00000 -7.863483e+09   0.000000  -0.567575  -1.621761   \n",
+       "25%     2.000000  1992.00000  2.465716e+08   1.000000   0.328960  -1.215649   \n",
+       "50%     4.000000  1994.50000  1.897898e+09   1.000000   0.641262  -0.462143   \n",
+       "75%     6.000000  1997.00000  3.372262e+09   1.000000   1.095843   1.607754   \n",
+       "max     7.000000  1999.00000  8.941232e+09   1.000000   1.446412   2.530277   \n",
+       "\n",
+       "              x3    opinion        op          Y       time    treated  \\\n",
+       "count  70.000000  70.000000  70.00000  70.000000  70.000000  70.000000   \n",
+       "mean    0.761851   2.442857   0.50000   1.845072   0.600000   0.428571   \n",
+       "std     1.446332   1.137448   0.50361   3.015167   0.493435   0.498445   \n",
+       "min    -1.165387   1.000000   0.00000  -7.863483   0.000000   0.000000   \n",
+       "25%    -0.079315   1.000000   0.00000   0.246572   0.000000   0.000000   \n",
+       "50%     0.514191   2.500000   0.50000   1.897898   1.000000   0.000000   \n",
+       "75%     1.154864   3.000000   1.00000   3.372262   1.000000   1.000000   \n",
+       "max     7.168922   4.000000   1.00000   8.941232   1.000000   1.000000   \n",
+       "\n",
+       "             did      _diff  \n",
+       "count  70.000000  70.000000  \n",
+       "mean    0.257143   0.257143  \n",
+       "std     0.440215   0.440215  \n",
+       "min     0.000000   0.000000  \n",
+       "25%     0.000000   0.000000  \n",
+       "50%     0.000000   0.000000  \n",
+       "75%     0.750000   0.750000  \n",
+       "max     1.000000   1.000000  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c111d4e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      Y   R-squared:                       0.083\n",
+      "Model:                            OLS   Adj. R-squared:                  0.041\n",
+      "Method:                 Least Squares   F-statistic:                     1.984\n",
+      "Date:                Fri, 14 Nov 2025   Prob (F-statistic):              0.125\n",
+      "Time:                        18:43:26   Log-Likelihood:                -173.06\n",
+      "No. Observations:                  70   AIC:                             354.1\n",
+      "Df Residuals:                      66   BIC:                             363.1\n",
+      "Df Model:                           3                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          0.3581      0.738      0.485      0.629      -1.116       1.832\n",
+      "time           2.2895      0.953      2.402      0.019       0.387       4.192\n",
+      "treated        1.7760      1.128      1.575      0.120      -0.475       4.027\n",
+      "did           -2.5195      1.456     -1.731      0.088      -5.426       0.387\n",
+      "==============================================================================\n",
+      "Omnibus:                        6.182   Durbin-Watson:                   1.615\n",
+      "Prob(Omnibus):                  0.045   Jarque-Bera (JB):                7.779\n",
+      "Skew:                          -0.304   Prob(JB):                       0.0205\n",
+      "Kurtosis:                       4.516   Cond. No.                         7.26\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# Parto de tu df original\n",
+    "df_reg = df.copy()\n",
+    "\n",
+    "# ==== Generar las variables como en Stata ====\n",
+    "\n",
+    "# Y = y / 1e9\n",
+    "df_reg[\"Y\"] = df_reg[\"y\"] / 1_000_000_000\n",
+    "\n",
+    "# time = (year >= 1994) & !missing(year)\n",
+    "df_reg[\"time\"] = ((df_reg[\"year\"] >= 1994) & df_reg[\"year\"].notna()).astype(int)\n",
+    "\n",
+    "# treated = (country > 4) & !missing(country)\n",
+    "df_reg[\"treated\"] = ((df_reg[\"country\"] > 4) & df_reg[\"country\"].notna()).astype(int)\n",
+    "\n",
+    "# did = time * treated\n",
+    "df_reg[\"did\"] = df_reg[\"time\"] * df_reg[\"treated\"]\n",
+    "\n",
+    "# ==== Misma muestra que Stata: sin missing en las variables del modelo ====\n",
+    "vars_modelo = [\"Y\", \"time\", \"treated\", \"did\"]\n",
+    "df_reg = df_reg.dropna(subset=vars_modelo)\n",
+    "\n",
+    "# ==== Regresión OLS: Y time treated did ====\n",
+    "X = df_reg[[\"time\", \"treated\", \"did\"]]\n",
+    "X = sm.add_constant(X)  # agrega _cons\n",
+    "y = df_reg[\"Y\"]\n",
+    "\n",
+    "model = sm.OLS(y, X)\n",
+    "res = model.fit()\n",
+    "\n",
+    "print(res.summary())"
+   ]
   }
  ],
  "metadata": {
