--- a/clase_p_4.ipynb
+++ b/clase_p_4.ipynb
@@ -461,6 +461,258 @@
     "\n",
     "print(res.summary())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5340bd34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          PanelOLS Estimation Summary                           \n",
+      "================================================================================\n",
+      "Dep. Variable:                      Y   R-squared:                        0.0968\n",
+      "Estimator:                   PanelOLS   R-squared (Between):             -0.5101\n",
+      "No. Observations:                  70   R-squared (Within):               0.0968\n",
+      "Date:                Fri, Nov 14 2025   R-squared (Overall):             -0.0035\n",
+      "Time:                        18:59:03   Log-likelihood                   -166.19\n",
+      "Cov. Estimator:            Unadjusted                                           \n",
+      "                                        F-statistic:                      3.2697\n",
+      "Entities:                           7   P-value                           0.0448\n",
+      "Avg Obs:                      10.0000   Distribution:                    F(2,61)\n",
+      "Min Obs:                      10.0000                                           \n",
+      "Max Obs:                      10.0000   F-statistic (robust):             3.2697\n",
+      "                                        P-value                           0.0448\n",
+      "Time periods:                      10   Distribution:                    F(2,61)\n",
+      "Avg Obs:                       7.0000                                           \n",
+      "Min Obs:                       7.0000                                           \n",
+      "Max Obs:                       7.0000                                           \n",
+      "                                                                                \n",
+      "                             Parameter Estimates                              \n",
+      "==============================================================================\n",
+      "            Parameter  Std. Err.     T-stat    P-value    Lower CI    Upper CI\n",
+      "------------------------------------------------------------------------------\n",
+      "const          1.1193     0.5262     2.1270     0.0375      0.0670      2.1715\n",
+      "time           2.2895     0.8987     2.5476     0.0134      0.4924      4.0865\n",
+      "did           -2.5195     1.3728    -1.8354     0.0713     -5.2645      0.2255\n",
+      "==============================================================================\n",
+      "\n",
+      "F-test for Poolability: 2.6673\n",
+      "P-value: 0.0230\n",
+      "Distribution: F(6,61)\n",
+      "\n",
+      "Included effects: Entity\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_32968\\1368542021.py:43: AbsorbingEffectWarning: \n",
+      "Variables have been fully absorbed and have removed from the regression:\n",
+      "\n",
+      "treated\n",
+      "\n",
+      "  res_fe = mod_fe.fit(cov_type=\"unadjusted\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "from linearmodels.panel import PanelOLS\n",
+    "\n",
+    "# ==========================\n",
+    "# 1) Partimos de tu df\n",
+    "# ==========================\n",
+    "df_fe = df.copy()\n",
+    "\n",
+    "# Y = y / 1e9  (como en Stata: gen Y = y/1000000000)\n",
+    "df_fe[\"Y\"] = df_fe[\"y\"] / 1_000_000_000\n",
+    "\n",
+    "# time = (year >= 1994) & !missing(year)\n",
+    "df_fe[\"time\"] = ((df_fe[\"year\"] >= 1994) & df_fe[\"year\"].notna()).astype(int)\n",
+    "\n",
+    "# treated = (country > 4) & !missing(country)\n",
+    "df_fe[\"treated\"] = ((df_fe[\"country\"] > 4) & df_fe[\"country\"].notna()).astype(int)\n",
+    "\n",
+    "# did = time * treated\n",
+    "df_fe[\"did\"] = df_fe[\"time\"] * df_fe[\"treated\"]\n",
+    "\n",
+    "# ==========================\n",
+    "# 2) Definimos el panel\n",
+    "# ==========================\n",
+    "# xtset country year  <->  índice multinivel (country, year)\n",
+    "df_fe = df_fe.set_index([\"country\", \"year\"])\n",
+    "\n",
+    "# ==========================\n",
+    "# 3) Modelo FE (within) tipo: xtreg ..., fe\n",
+    "# ==========================\n",
+    "y = df_fe[\"Y\"]\n",
+    "\n",
+    "# Incluimos time, treated y did como en Stata + constante\n",
+    "# (treated será omitida por colinealidad con los efectos fijos)\n",
+    "X = df_fe[[\"time\", \"treated\", \"did\"]]\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "# entity_effects=True  -> efectos fijos por país (country)\n",
+    "mod_fe = PanelOLS(y, X, entity_effects=True, drop_absorbed=True)\n",
+    "\n",
+    "# Para replicar Stata, usá var/cov clásica (no robusta):\n",
+    "res_fe = mod_fe.fit(cov_type=\"unadjusted\")\n",
+    "\n",
+    "print(res_fe.summary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "371c5b2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "from scipy import stats\n",
+    "\n",
+    "def did_diff_table(df, yvar=\"Y\", treated=\"treated\", time=\"time\"):\n",
+    "    df = df.copy()\n",
+    "\n",
+    "    # ===============================\n",
+    "    # A. Medias por grupo y período\n",
+    "    # ===============================\n",
+    "    mean_before_control  = df[(df[treated]==0) & (df[time]==0)][yvar].mean()\n",
+    "    mean_before_treated  = df[(df[treated]==1) & (df[time]==0)][yvar].mean()\n",
+    "    diff_before = mean_before_treated - mean_before_control\n",
+    "\n",
+    "    mean_after_control   = df[(df[treated]==0) & (df[time]==1)][yvar].mean()\n",
+    "    mean_after_treated   = df[(df[treated]==1) & (df[time]==1)][yvar].mean()\n",
+    "    diff_after = mean_after_treated - mean_after_control\n",
+    "\n",
+    "    # ===============================\n",
+    "    # B. Regresión: Y = b0 + time + treated + did\n",
+    "    # ===============================\n",
+    "    df[\"did\"] = df[treated] * df[time]\n",
+    "\n",
+    "    X = df[[time, treated, \"did\"]]\n",
+    "    X = sm.add_constant(X)\n",
+    "    y = df[yvar]\n",
+    "\n",
+    "    model = sm.OLS(y, X).fit()\n",
+    "\n",
+    "    b_time, b_treated, b_did = model.params[time], model.params[treated], model.params[\"did\"]\n",
+    "    se_time, se_treated, se_did = model.bse[time], model.bse[treated], model.bse[\"did\"]\n",
+    "\n",
+    "    # ===============================\n",
+    "    # C. Errores std de las \"diff\"\n",
+    "    # ===============================\n",
+    "    # before diff = treated - control  = β_treated\n",
+    "    se_before = model.bse[\"treated\"]\n",
+    "    t_before = model.tvalues[\"treated\"]\n",
+    "    p_before = model.pvalues[\"treated\"]\n",
+    "\n",
+    "    # after diff  = (β_treated + β_did)\n",
+    "    diff_after_coef = b_treated + b_did\n",
+    "    # Var(a+b) = Var(a)+Var(b)+2Cov(a,b)\n",
+    "    cov = model.cov_params().loc[\"treated\",\"did\"]\n",
+    "    se_after = np.sqrt(model.bse[\"treated\"]**2 + model.bse[\"did\"]**2 + 2*cov)\n",
+    "    t_after = diff_after_coef / se_after\n",
+    "    df_resid = int(model.df_resid)\n",
+    "    p_after = 2*(1-stats.t.cdf(abs(t_after), df_resid))\n",
+    "\n",
+    "    # DID effect = β_did\n",
+    "    did_coef = b_did\n",
+    "    did_se = se_did\n",
+    "    did_t = model.tvalues[\"did\"]\n",
+    "    did_p = model.pvalues[\"did\"]\n",
+    "\n",
+    "    # ===============================\n",
+    "    # D. Construcción de tabla\n",
+    "    # ===============================\n",
+    "    tabla = f\"\"\"\n",
+    "DIFFERENCE-IN-DIFFERENCES ESTIMATION RESULTS\n",
+    "Number of observations in the DIFF-IN-DIFF: {len(df)}\n",
+    "\n",
+    "            Before       After\n",
+    "Control:    {len(df[(df[treated]==0) & (df[time]==0)])}     {len(df[(df[treated]==0) & (df[time]==1)])}     {len(df[df[treated]==0])}\n",
+    "Treated:    {len(df[(df[treated]==1) & (df[time]==0)])}     {len(df[(df[treated]==1) & (df[time]==1)])}     {len(df[df[treated]==1])}\n",
+    "\n",
+    "--------------------------------------------------------\n",
+    "Outcome var.   | {yvar}\n",
+    "----------------+---------+---------+---------+---------\n",
+    "Before\n",
+    " Control        | {mean_before_control:.3f}\n",
+    " Treated        | {mean_before_treated:.3f}\n",
+    " Diff (T-C)     | {diff_before:.3f}   | {se_before:.3f} | {t_before:.2f} | {p_before:.3f}\n",
+    "\n",
+    "After\n",
+    " Control        | {mean_after_control:.3f}\n",
+    " Treated        | {mean_after_treated:.3f}\n",
+    " Diff (T-C)     | {diff_after:.3f}   | {se_after:.3f} | {t_after:.2f} | {p_after:.3f}\n",
+    "\n",
+    "Diff-in-Diff    | {did_coef:.3f}   | {did_se:.3f} | {did_t:.2f} | {did_p:.3f}\n",
+    "--------------------------------------------------------\n",
+    "R-square: {model.rsquared:.2f}\n",
+    "\"\"\"\n",
+    "\n",
+    "    print(tabla)\n",
+    "    return model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "e3697cab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "DIFFERENCE-IN-DIFFERENCES ESTIMATION RESULTS\n",
+      "Number of observations in the DIFF-IN-DIFF: 70\n",
+      "\n",
+      "            Before       After\n",
+      "Control:    16     24     40\n",
+      "Treated:    12     18     30\n",
+      "\n",
+      "--------------------------------------------------------\n",
+      "Outcome var.   | Y\n",
+      "----------------+---------+---------+---------+---------\n",
+      "Before\n",
+      " Control        | 0.358\n",
+      " Treated        | 2.134\n",
+      " Diff (T-C)     | 1.776   | 1.128 | 1.58 | 0.120\n",
+      "\n",
+      "After\n",
+      " Control        | 2.648\n",
+      " Treated        | 1.904\n",
+      " Diff (T-C)     | -0.744   | 0.921 | -0.81 | 0.422\n",
+      "\n",
+      "Diff-in-Diff    | -2.520   | 1.456 | -1.73 | 0.088\n",
+      "--------------------------------------------------------\n",
+      "R-square: 0.08\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = did_diff_table(df_reg, yvar=\"Y\", treated=\"treated\", time=\"time\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16250a80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
