--- a/clase_p_4.ipynb
+++ b/clase_p_4.ipynb
@@ -708,8 +708,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "8f3ed9d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>t</th>\n",
+       "      <th>treated</th>\n",
+       "      <th>fte</th>\n",
+       "      <th>bk</th>\n",
+       "      <th>kfc</th>\n",
+       "      <th>roys</th>\n",
+       "      <th>wendys</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  t  treated   fte  bk  kfc  roys  wendys\n",
+       "0   1  0        1  31.0   1    0     0       0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import pyreadstat as st\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "path = r\"C:\\Users\\HP\\OneDrive\\Escritorio\\David Guzzi\\DiTella\\MEC\\Materias\\2025\\2025 2T\\[MT08-MT13] Microeconometría II\\Clases prácticas\\PS\\PS3-20251111\\CardKrueger1994.dta\"\n",
+    "\n",
+    "df, meta = st.read_dta(path)\n",
+    "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "16250a80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 'Store ID',\n",
+       " 't': 'Feb. 1992 = 0; Nov. 1992 = 1',\n",
+       " 'treated': 'New Jersey = 1; Pennsylvania = 0',\n",
+       " 'fte': 'Output: Full Time Employment',\n",
+       " 'bk': 'Burger King == 1',\n",
+       " 'kfc': 'Kentuky Fried Chiken == 1',\n",
+       " 'roys': 'Roy Rogers == 1',\n",
+       " 'wendys': \"Wendy's == 1\"}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meta.column_names_to_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2097bd58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>t</th>\n",
+       "      <th>treated</th>\n",
+       "      <th>fte</th>\n",
+       "      <th>bk</th>\n",
+       "      <th>kfc</th>\n",
+       "      <th>roys</th>\n",
+       "      <th>wendys</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>820.000000</td>\n",
+       "      <td>820.000000</td>\n",
+       "      <td>820.000000</td>\n",
+       "      <td>801.000000</td>\n",
+       "      <td>820.000000</td>\n",
+       "      <td>820.000000</td>\n",
+       "      <td>820.000000</td>\n",
+       "      <td>820.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>246.507317</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.807317</td>\n",
+       "      <td>17.594569</td>\n",
+       "      <td>0.417073</td>\n",
+       "      <td>0.195122</td>\n",
+       "      <td>0.241463</td>\n",
+       "      <td>0.146341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>148.141276</td>\n",
+       "      <td>0.500305</td>\n",
+       "      <td>0.394647</td>\n",
+       "      <td>9.022517</td>\n",
+       "      <td>0.493376</td>\n",
+       "      <td>0.396536</td>\n",
+       "      <td>0.428232</td>\n",
+       "      <td>0.353664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>119.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>11.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>237.500000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>16.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>372.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>522.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               id           t     treated         fte          bk         kfc  \\\n",
+       "count  820.000000  820.000000  820.000000  801.000000  820.000000  820.000000   \n",
+       "mean   246.507317    0.500000    0.807317   17.594569    0.417073    0.195122   \n",
+       "std    148.141276    0.500305    0.394647    9.022517    0.493376    0.396536   \n",
+       "min      1.000000    0.000000    0.000000    0.000000    0.000000    0.000000   \n",
+       "25%    119.000000    0.000000    1.000000   11.500000    0.000000    0.000000   \n",
+       "50%    237.500000    0.500000    1.000000   16.500000    0.000000    0.000000   \n",
+       "75%    372.000000    1.000000    1.000000   22.000000    1.000000    0.000000   \n",
+       "max    522.000000    1.000000    1.000000   80.000000    1.000000    1.000000   \n",
+       "\n",
+       "             roys      wendys  \n",
+       "count  820.000000  820.000000  \n",
+       "mean     0.241463    0.146341  \n",
+       "std      0.428232    0.353664  \n",
+       "min      0.000000    0.000000  \n",
+       "25%      0.000000    0.000000  \n",
+       "50%      0.000000    0.000000  \n",
+       "75%      0.000000    0.000000  \n",
+       "max      1.000000    1.000000  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daf36d9a",
    "metadata": {},
    "outputs": [],
    "source": []
