--- a/clase_p_5.ipynb
+++ b/clase_p_5.ipynb
@@ -2,24 +2,210 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e412282b",
+   "execution_count": 1,
+   "id": "44f1baad",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Para reproducibilidad\n",
+    "np.random.seed(5)\n",
+    "\n",
+    "n = 100\n",
+    "\n",
+    "# Resultado potencial si NO recibe tratamiento: y0 ~ N(100, 30^2)\n",
+    "y0 = np.random.normal(loc=100, scale=30, size=n)\n",
+    "\n",
+    "# Efecto de tratamiento constante\n",
+    "te = 20\n",
+    "\n",
+    "# Resultado potencial si recibe tratamiento: y1 = y0 + te + N(0, 10^2)\n",
+    "y1 = y0 + te + np.random.normal(loc=0, scale=10, size=n)\n",
+    "\n",
+    "# Tratamiento otorgado aleatoriamente\n",
+    "# drawnorm random -> normal estándar\n",
+    "random_normal = np.random.normal(loc=0, scale=1, size=n)\n",
+    "D = (random_normal > 0).astype(int)  # 1 si tratado, 0 si control\n",
+    "\n",
+    "# Variable observada\n",
+    "y = D * y1 + (1 - D) * y0\n",
+    "\n",
+    "# Armamos un DataFrame como si fuera la base en Stata\n",
+    "df = pd.DataFrame({\n",
+    "    'y0': y0,\n",
+    "    'y1': y1,\n",
+    "    'D': D,\n",
+    "    'y': y\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "63903ab4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>y0</th>\n",
+       "      <th>te</th>\n",
+       "      <th>y1</th>\n",
+       "      <th>random</th>\n",
+       "      <th>D</th>\n",
+       "      <th>y</th>\n",
+       "      <th>U</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>89.203667</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>102.014397</td>\n",
+       "      <td>0.775717</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>102.014397</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          y0    te          y1    random    D           y    U\n",
+       "0  89.203667  20.0  102.014397  0.775717  1.0  102.014397  0.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import pyreadstat as st\n",
     "pd.set_option('display.max_columns', None)\n",
-    "path = r\"C:\\Users\\HP\\OneDrive\\Escritorio\\David Guzzi\\DiTella\\MEC\\Materias\\2025\\2025 2T\\[MT08-MT13] Microeconometría II\\Clases prácticas\\PS\\PS3-20251111\\Panel101.dta\"\n",
+    "path = r\"C:\\Users\\HP\\OneDrive\\Escritorio\\David Guzzi\\DiTella\\MEC\\Materias\\2025\\2025 2T\\[MT08-MT13] Microeconometría II\\Clases prácticas\\PS\\PS5-20251103\\ps5_ex2.dta\"\n",
     "\n",
     "df, meta = st.read_dta(path)\n",
     "df.head(1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d1daeecb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(19.67476337727264)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_treated = df.loc[df['D'] == 1, 'y']\n",
+    "y_control = df.loc[df['D'] == 0, 'y']\n",
+    "\n",
+    "ate_sample = y_treated.mean() - y_control.mean()\n",
+    "ate_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cb59286a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(3.226834906864113), np.float64(0.001702316698383185))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_stat, p_value = stats.ttest_ind(y_treated, y_control, equal_var=True)\n",
+    "t_stat, p_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9d0774b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Two-sample t test with equal variances\n",
+      "Mean treated (D=1): 116.619\n",
+      "Mean control (D=0): 96.944\n",
+      "ATE sample (treated - control): 19.675\n",
+      "t statistic: 3.227\n",
+      "p-value: 0.002\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Two-sample t test with equal variances\")\n",
+    "print(f\"Mean treated (D=1): {y_treated.mean():.3f}\")\n",
+    "print(f\"Mean control (D=0): {y_control.mean():.3f}\")\n",
+    "print(f\"ATE sample (treated - control): {ate_sample:.3f}\")\n",
+    "print(f\"t statistic: {t_stat:.3f}\")\n",
+    "print(f\"p-value: {p_value:.3f}\")\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
