--- a/clase_p_5.ipynb
+++ b/clase_p_5.ipynb
@@ -187,6 +187,80 @@
     "print(f\"t statistic: {t_stat:.3f}\")\n",
     "print(f\"p-value: {p_value:.3f}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b1a59dc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(20.0)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ATE_true = df['te'].mean()\n",
+    "ATE_true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7ef115cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(20.0)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ATT_true = df.loc[df['D'] == 1, 'te'].mean()\n",
+    "ATT_true\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "277c48a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(20.0)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ATU_true = df.loc[df['D'] == 0, 'te'].mean()\n",
+    "ATU_true\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f99e69c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
